--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,23 @@
 {
   "env": {
     "test": {
-      "presets": ["es2015", "react"],
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "current"
+          },
+          "exclude": [
+            "transform-regenerator"
+          ],
+        }],
+        "react",
+      ],
       plugins: [
         "transform-async-to-generator",
         "transform-class-properties",
         "transform-flow-strip-types",
         ["import", { libraryName: "antd" }]
-      ]
+      ],
     }
   },
   presets: [
