convert model specs to ava (6/6) (#1754)

--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "failFast": true,
     "failWithoutAssertions": false,
     "babel": "inherit",
+    "powerAssert": true,
     "require": [
       "babel-register"
     ]
