fix linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
       "JQuery": false,
       "SyntheticInputEvent": false,
       "$Keys": false,
+      "$Subtype": false,
       "Generator": false
     },
     "rules": {
