replace seamless-immutable with deep-freeze, store subscribe notifies only if the state changed, cache tracing diffing between saving and rendering

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "clipboard-js": "^0.2.0",
     "d3": "^3.5.12",
     "data.maybe": "^1.2.2",
+    "deep-freeze": "0.0.1",
     "es6-promise": "^3.0.2",
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
@@ -101,7 +102,6 @@
     "redux-logger": "^3.0.0",
     "redux-saga": "^0.14.3",
     "scroll-into-view-if-needed": "^1.0.2",
-    "seamless-immutable": "^7.0.1",
     "stats.js": "^1.0.0",
     "three": "^0.84.0",
     "tween.js": "^16.3.1",
