Add cache busting by appending commit-hash to js requests, fixes #1834 (#1835)
* Add cache busting by appending git-hash to js requests, fixes #1834

* adds changes to webpack

* updated dev dependencies

* removed commit.txt

* fixes flow errors

* fixes tests

* better test output for jenkins

* Add route for buildinfo

--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "url": "git://github.com/scalableminds/webknossos.git"
   },
   "devDependencies": {
-    "ava": "^0.18.2",
-    "babel-cli": "^6.16.0",
-    "babel-core": "^6.21.0",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-async-to-generator": "^6.16.0",
-    "babel-plugin-transform-class-properties": "^6.19.0",
-    "babel-plugin-transform-flow-strip-types": "^6.21.0",
+    "ava": "^0.19.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.1.4",
-    "babel-preset-react": "^6.16.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-register": "^6.9.0",
-    "css-loader": "^0.26.1",
-    "documentation": "^4.0.0-beta.18",
+    "css-loader": "^0.28.1",
+    "documentation": "4.0.0-rc.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-import-resolver-webpack": "^0.8.0",
@@ -32,28 +32,28 @@
     "eslint-plugin-jasmine": "^2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "^6.8.0",
-    "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "2.0.0",
-    "file-loader": "^0.9.0",
+    "exports-loader": "^0.6.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "flow-bin": "^0.43.1",
-    "imports-loader": "^0.7.0",
+    "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "mock-require": "^1.2.1",
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
+    "style-loader": "^0.17.0",
+    "url-loader": "^0.5.8",
     "wdio-jasmine-framework": "^0.2.19",
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "2.3.2",
-    "worker-loader": "^0.7.1"
+    "webpack": "^2.5.1"
   },
   "scripts": {
     "test": "export NODE_PATH=app/assets/javascripts && BABEL_ENV=test ava --timeout=30s",
+    "test-verbose": "export NODE_PATH=app/assets/javascripts && BABEL_ENV=test ava --timeout=30s --verbose",
     "test-watch": "export NODE_PATH=app/assets/javascripts && BABEL_ENV=test ava --watch",
     "test-e2e": "node_modules/.bin/wdio wdio.conf.js",
     "flow": "node_modules/.bin/flow",
