Cleans up config files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,4 @@
 include "github.conf"
-include "airbrake.conf"
-include "mturk/mturk.conf"
-include "aws.conf"
 
 # Configuration
 application {
@@ -28,8 +25,6 @@ http.uri = "http://localhost:9000"
 
 evolutionplugin = disabled
 
-scm.support.mail = "tom.bocklisch@scalableminds.com"
-
 workload {
   mail = ""
   active = false
@@ -37,14 +32,13 @@ workload {
 
 braintracing{
   active=false
-  mailinglist="help@mhlab.net"
   newuserlist="help@mhlab.net"
   logTimeForExplorative=false
 }
 
 application{
   # The secret key is used to secure cryptographics functions.
-  secret="/tmbgtur2359=(623de35]/3eg>2opw2/of/45gh654>vb654g/5f4//hbfw245<"
+  secret="$JUeGY5yhw~pw%`pyVeDF*}`sF^kL'@sF$=dSTx?<z*f/vFg"
   enableAutoVerify=false
   insertInitialData=true
   authentication{
@@ -52,7 +46,7 @@ application{
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser="scmboy@scalableminds.com"
-    ssoKey="adert345wvfs4rq3qdf"
+    ssoKey="something secure"
   }
 }
 
@@ -60,6 +54,7 @@ application{
 # ~~~~~
 actor.defaultTimeout = 10
 js.defaultTimeout = 5
+akka.loggers = ["akka.event.slf4j.Slf4jLogger"]
 
 # Binary data settings
 # ~~~~~
@@ -91,7 +86,6 @@ oxalis{
 # ~~~~~
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
-
 mongodb{
   db=play-oxalis
   url="127.0.0.1"
@@ -108,22 +102,63 @@ mongodb{
   }
 }
 
-akka.loggers = ["akka.event.slf4j.Slf4jLogger"]
-
 # Email configuration
 # ~~~~~
 mail{
   enabled=false
-  smtp{
-    host="mail.oxalis.at"
+  smtp{ # To be defined in secrets.conf
+    host=""
     port=465
     tls=true
     auth=true
-    user=mailout
-    pass=gpyKpxjda4FkoFC
+    user=""
+    pass=""
   }
   subject.prefix="webKnossos | "
 }
+
+# AWS config (optional)
+# ~~~~~
+amazon.sqs { # To be defined in secrets.conf
+  accessKey = ""
+  secretKey = ""
+  region = ""
+  clientId = ""
+}
+
+amazon.mturk {
+  serviceUrl = {
+    sandbox = "https://mechanicalturk.sandbox.amazonaws.com/?Service=AWSMechanicalTurkRequester"
+    production = "https://mechanicalturk.amazonaws.com?Service=AWSMechanicalTurkRequester"
+  }
+  submissionUrl = {
+    sandbox = "https://workersandbox.mturk.com/mturk/externalSubmit"
+    production = "https://www.mturk.com/mturk/externalSubmit"
+  }
+  retriableErrors = ["Server.ServiceUnavailable"]
+  retryAttempts = 10
+  retryDelayMillis = 1000
+  sandbox = true
+  questionTemplateBaseDir = "conf/mturk/"
+}
+
+amazon.mturk { # To be defined in secrets.conf
+  accessKey = ""
+  secretKey = ""
+}
+
+# Airbrake config (optional)
+# ~~~~~
+airbrake{ # To be defined in secrets.conf
+  apiKey=""
+  ssl=false
+  enabled=false
+  endpoint="api.airbrake.io/notifier_api/v2/notices"
+  environment="dev-local-"${application.branch}
+  projectKey=""
+  projectID=""
+}
+
 
 # other settings
 play.http.parser.maxMemoryBuffer=25M
