--- a/conf/application_dev.conf
+++ b/conf/application_dev.conf
@@ -10,7 +10,6 @@ http.uri="http://"${application.branch}".oxalis.at"
 oxalis.annotation.storageFolder="/srv/database/nmls/"${application.branch}
 
 application{
-  secret="/tmbgtur2359=(623de35]/3eg>2opw2/of/45gh654>vb654g/5f4//hbfw245<"
   insertInitialData=true
 
   authentication{
@@ -20,7 +19,7 @@ application{
 }
 
 datastore{
-  key = "something-secure"
+  key = "something-secure" # To be defined in secrets.conf
   name = "localhost"
   debugMode = false
   oxalis{
@@ -29,17 +28,7 @@ datastore{
   }
 }
 
-mail{
-  enabled=true
-  smtp{
-    host="smtp.mailgun.org"
-    port=587
-    tls=true
-    auth=true
-    user="postmaster@webknossos.org"
-    pass=eb95dfda120e444872f47eb0619e5733
-  }
-}
+mail.enabled=true
 
 google {
   analytics.trackingID="UA-68675741-1"
@@ -56,5 +45,6 @@ braingames.binary{
   saveTimeout = 10
 }
 
+# Loaded when available
 include "secrets.conf"
 include "../../secrets.conf"
