--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,6 +67,7 @@
       "import/extensions": ["warn", { "js": "never", "jsx": "always" }],
       "import/no-unresolved": "off",
       "quote-props": ["error", "as-needed", {"numbers": true}],
-      "react/sort-comp": ["error", {"order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]}]
+      "react/sort-comp": ["error", {"order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]}],
+      "flowtype/no-types-missing-file-annotation": "off"
     }
 }
