--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,7 @@ application {
   version = "1.0.0-1"
 }
 
+play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
 datastore {
