--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "bootstrap-toggle": "^2.2.2",
     "brace": "^0.8.0",
     "c3": "^0.4.10",
+    "circular-dependency-plugin": "^3.0.0",
     "classnames": "^2.2.5",
     "clipboard-js": "^0.2.0",
     "d3": "^3.5.12",
