Small enhancements and reformatting in config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,22 +1,24 @@
+play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
+
 # Configuration
 application {
-  name    = "standalone-datastore"
-  branch  = local
+  name = "standalone-datastore"
+  branch = local
   # The secret key is used to secure cryptographics functions.
-  secret="/tfger=?!359=(623de35]/3eg>34>r9/of/45gh654>?!654g/5f4//hbfw245<"
+  secret = "/tfger=?!359=(623de35]/3eg>34>r9/of/45gh654>?!654g/5f4//hbfw245<"
 }
 
 # Defining the listening address:
-http{
+http {
   address = "0.0.0.0"
   uri = "http://localhost:9090"
 }
 
-datastore{
+datastore {
   key = "something-secur3"
   name = "standalone-9090"
   debugMode = false
-  oxalis{
+  oxalis {
     uri = "localhost:9000"
     secured = false
   }
@@ -24,14 +26,14 @@ datastore{
 
 # Binary data settings
 # ~~~~~
-braingames.binary{
+braingames.binary {
   cacheMaxSize = 1000 # in entries (each entry is 2 MB)
   loadTimeout = 10 # in seconds
   saveTimeout = 10 # in seconds
   baseFolder = binaryData
   userBaseFolder = userBinaryData
-  
-  changeHandler{
+
+  changeHandler {
     enabled = true
     tickerInterval = 10 # in minutes
   }
@@ -41,7 +43,7 @@ braingames.binary{
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel="INFO"
+  loglevel = "INFO"
 }
 
 # Avoid the creation of a pid file
