--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,31 +1,33 @@
 # Configuration
 application {
-  name    = "braingames-datastore"
-  branch  = local
+  name = "braingames-datastore"
+  branch = local
   version = "0.1-SNAPSHOT"
 }
 
 # Defining the listening address:
-http.address="127.0.0.1"
-http.uri="http://localhost:9000"
+http.address = "127.0.0.1"
+http.uri = "http://localhost:9000"
 
-application{
+application {
   # The secret key is used to secure cryptographics functions.
-  secret="/tmbgtur2359=(623de35]/3eg>2opw2/of/45gh654>vb654g/5f4//hbfw245<"
+  secret = "/tmbgtur2359=(623de35]/3eg>2opw2/of/45gh654>vb654g/5f4//hbfw245<"
 }
 
 # Binary data settings
 # ~~~~~
-braingames.binary{
+braingames.binary {
   cacheMaxSize = 100
   loadTimeout = 10
   saveTimeout = 10
   baseFolder = binaryData
-  userBaseFolder = userBinaryData
-  userBackupFolder = userBinaryData/backup
-  
-  changeHandler{
+
+  changeHandler {
     enabled = true
     tickerInterval = 10
   }
 }
+
+# other settings
+play.http.parser.maxMemoryBuffer=25M
+play.http.parser.maxDiskBuffer=1G
