switch to new datastore lib

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
+play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
+
 # Configuration
 application {
   name = "standalone-datastore"
