--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "wdio-selenium-standalone-service": "0.0.7",
     "wdio-spec-reporter": "0.0.3",
     "webdriverio": "^4.4.0",
-    "webpack": "^2.5.1"
+    "webpack": "^3.0.0"
   },
   "scripts": {
     "test": "export NODE_PATH=app/assets/javascripts && BABEL_ENV=test ava --timeout=30s",
@@ -107,6 +107,7 @@
     "tween.js": "^16.3.1",
     "underscore": "^1.8.3",
     "webcola": "3.3.0",
+    "webpack-bundle-analyzer": "^2.8.2",
     "whatwg-fetch": "^1.1.0"
   },
   "ava": {
