--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "dependencies": {
     "airbrake-js": "^0.5.8",
     "antd": "^2.9.3",
+    "babel-plugin-dynamic-import-webpack": "^1.0.1",
     "babel-plugin-import": "^1.1.0",
     "backbone": "1.3.3",
     "backbone-subviews": "^0.7.4",
