--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ src/main/scala/rebel.xml
 *.mtl
 public/bower_components
 public/bundle
+public/test-bundle
 public/commit.txt
 /knowledge
 conf/github.conf
