--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,18 @@
 {
-    "extends": "airbnb",
+    "extends": [
+      "airbnb",
+      "plugin:flowtype/recommended",
+      "plugin:react/recommended",
+      "prettier",
+      "prettier/flowtype",
+      "prettier/react"
+    ],
     "plugins": [
         "react",
         "jsx-a11y",
         "import",
-        "jasmine"
+        "jasmine",
+        "flowtype"
     ],
     "parserOptions": {
       "ecmaVersion": 8
@@ -31,7 +39,7 @@
       "Generator": false
     },
     "rules": {
-      "quotes": ["error", "double"],
+      "quotes": ["error", "double", { "avoidEscape": true }],
       "max-len": ["off", 100],
       "class-methods-use-this": "off",
       "operator-assignment": "warn",
@@ -59,6 +67,7 @@
       "import/extensions": ["warn", { "js": "never", "jsx": "always" }],
       "import/no-unresolved": "off",
       "quote-props": ["error", "as-needed", {"numbers": true}],
-      "react/sort-comp": ["error", {"order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]}]
+      "react/sort-comp": ["error", {"order": ["type-annotations", "static-methods", "lifecycle", "everything-else", "render"]}],
+      "flowtype/no-types-missing-file-annotation": "off"
     }
 }
