adds email config

--- a/conf/application_prod.conf
+++ b/conf/application_prod.conf
@@ -24,6 +24,7 @@ mongodb {
 }
 
 braintracing.active = true
+braintracing.overTimeList = "hiwiadmin@mhlab.net"
 workload.active = true
 
 airbrake {
