Add new config parameters

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -31,7 +31,8 @@ braingames.binary {
   loadTimeout = 10 # in seconds
   saveTimeout = 10 # in seconds
   baseFolder = binaryData
-  userBaseFolder = userBinaryData
+  tracingDataFolder = tracingData
+  backupFolder = backup
 
   changeHandler {
     enabled = true
