--- a/conf/application_dev.conf
+++ b/conf/application_dev.conf
@@ -13,7 +13,7 @@ application{
   insertInitialData=true
 
   authentication{
-    enableDevAutoLogin=true
+    enableDevAutoLogin=false
     enableDevAutoVerify=false
   }
 }
