Brave new world (#5)
* switch to new datastore lib

* ignore data directories

* Add new config parameters

* Change version

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,5 @@
+play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
+
 # Configuration
 application {
   name = "standalone-datastore"
@@ -29,7 +31,8 @@ braingames.binary {
   loadTimeout = 10 # in seconds
   saveTimeout = 10 # in seconds
   baseFolder = binaryData
-  userBaseFolder = userBinaryData
+  tracingDataFolder = tracingData
+  backupFolder = backup
 
   changeHandler {
     enabled = true
