adds larger upload buffer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -49,3 +49,7 @@ akka {
 
 # Avoid the creation of a pid file
 pidfile.path = "/dev/null"
+
+# other settings
+play.http.parser.maxMemoryBuffer=25M
+play.http.parser.maxDiskBuffer=1G
