Updated application config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,15 +61,15 @@ akka.loggers = ["akka.event.slf4j.Slf4jLogger"]
 # ~~~~~
 braingames.binary{
   cacheMaxSize = 10
-  loadTimeout = 10
-  saveTimeout = 10
+  loadTimeout = 10 # in seconds
+  saveTimeout = 10 # in seconds
   baseFolder = binaryData
-  userBaseFolder = userBinaryData
-  userBackupFolder = userBinaryData/backup
+  tracingDataFolder = tracingData
+  backupFolder = backup
 
   changeHandler{
     enabled = true
-    tickerInterval = 10
+    tickerInterval = 10 # in minutes
   }
 }
 
