--- a/conf/application_dev.conf
+++ b/conf/application_dev.conf
@@ -5,7 +5,7 @@ airbrake{
   environment="dev-"${application.branch}
 }
 
-http.uri="http://"${application.branch}".oxalis.at"
+http.uri="http://"${application.branch}".webknossos.xyz"
 
 oxalis.annotation.storageFolder="/srv/database/nmls/"${application.branch}
 
