--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-preset-react-optimize": "^1.0.1",
     "babel-register": "^6.9.0",
     "css-loader": "^0.28.1",
-    "documentation": "4.0.0-rc.1",
+    "documentation": "^5.1.1",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-config-prettier": "^2.1.1",
