Move default user password to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -46,7 +46,10 @@ application{
     enableDevAutoLogin=true
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
-    defaultUser="scmboy@scalableminds.com"
+    defaultUser={
+      email="scmboy@scalableminds.com"
+      password="secret"
+    }
     ssoKey="something secure"
   }
 }
