integrate enzyme for snapshot testing and e2e testing

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-register": "^6.9.0",
     "css-loader": "^0.28.1",
     "documentation": "^5.1.1",
+    "enzyme-to-json": "^1.5.1",
     "eslint": "^4.4.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.1.1",
@@ -40,13 +41,16 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "flow-bin": "^0.53.1",
+    "himalaya": "^0.2.12",
     "imports-loader": "^0.7.1",
     "isomorphic-fetch": "^2.2.0",
+    "jsdom": "^11.2.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "mock-require": "^1.2.1",
-    "node-fetch": "^1.7.1",
+    "node-fetch": "^1.7.2",
     "prettier": "^1.5.3",
+    "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.2.2",
     "sinon": "^1.17.3",
     "style-loader": "^0.18.2",
@@ -62,6 +66,7 @@
     "test-verbose": "buildtools/test.sh prepare -q && buildtools/test.sh test --timeout=60s --verbose",
     "test-only": "buildtools/test.sh test --timeout=30s",
     "test-watch": "buildtools/test.sh test --watch",
+    "test-debug": "buildtools/test.sh test --debug",
     "test-prepare": "buildtools/test.sh prepare",
     "test-prepare-watch": "buildtools/test.sh prepare -w",
     "test-e2e": "node_modules/.bin/wdio wdio.conf.js",
@@ -93,6 +98,7 @@
     "d3": "^3.5.12",
     "data.maybe": "^1.2.2",
     "deep-freeze": "0.0.1",
+    "enzyme": "^2.9.1",
     "es6-promise": "^3.0.2",
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
