getting started with silhouette: added dependencys, prepared new routes, updated .conf files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,5 @@
 include "github.conf"
+include "silhouette.conf"
 
 # Configuration
 application {
@@ -9,6 +10,7 @@ application {
 
 play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+#play.modules.enabled += "module.Module"
 
 datastore {
   key = "something-secure"
@@ -163,7 +165,13 @@ airbrake{ # To be defined in secrets.conf
   projectID=""
 }
 
+#play.mailer {
+#  mock = true
+#  host = localhost
+#}
 
 # other settings
 play.http.parser.maxMemoryBuffer=25M
 play.http.parser.maxDiskBuffer=1G
+#play.http.filters = "utils.Filters"
+play.http.errorHandler = "utils.ErrorHandler"
