--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
   frontend-linting:
     extends:
       service: sbt
-    command: bash -c "yarn run lint"
+    command: bash -c "yarn run lint && yarn run am-i-pretty"
 
   frontend-flow:
     extends:
