added more repositories, created new class AuthInfoServer (nessecary for silhouette, but not finished yet), added more methods for UserDAO, implementet mehtod handleStartSignUp with silhouette (not finished yes)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -165,6 +165,8 @@ airbrake{ # To be defined in secrets.conf
   projectID=""
 }
 
+mail.reply="No reply <no-reply@webknossos.org>"
+
 #play.mailer {
 #  mock = true
 #  host = localhost
