--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,9 +77,7 @@ services:
       service: sbt
     command: >
       bash -c
-      "service xvfb start &&
-       export DISPLAY=:99 &&
-       sbt -v -d \"test-only * --
+      "sbt -v -d \"test-only * --
       -Dconfig.file=./conf/application_$${MODE}.conf
       -Djava.net.preferIPv4Stack=true
       -Dhttp.address=0.0.0.0
