changed redirect to json

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,7 +14,7 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 datastore {
   key = "something-secure"
   name = "localhost"
-  debugMode = true
+  debugMode = false //true
   oxalis{
     uri = "localhost:9000"
     secured = false
@@ -29,7 +29,7 @@ evolutionplugin = disabled
 
 workload {
   mail = ""
-  active = false
+  active = true//false
 }
 
 braintracing{
@@ -110,14 +110,22 @@ mongodb{
 # Email configuration
 # ~~~~~
 mail{
-  enabled=false
+  enabled=true //false
   smtp{ # To be defined in secrets.conf
-    host=""
-    port=465
+    #host=""
+    #port=465
+    #tls=true
+    #auth=true
+    #user=""
+    #pass=""
+
+    # just to test it. I guess this should no be in the final version
+    host="smtp.mailgun.org"
+    port=587
     tls=true
     auth=true
-    user=""
-    pass=""
+    user="postmaster@webknossos.org"
+    pass="owx7ERsPXsoZ74ZhzdZWKCHiKFXnCKRt"
   }
   subject.prefix="webKnossos | "
 }
