--- a/conf/application.conf
+++ b/conf/application.conf
@@ -112,20 +112,12 @@ mongodb{
 mail{
   enabled=true //false
   smtp{ # To be defined in secrets.conf
-    #host=""
-    #port=465
-    #tls=true
-    #auth=true
-    #user=""
-    #pass=""
-
-    # just to test it. I guess this should no be in the final version
-    host="smtp.mailgun.org"
-    port=587
+    host=""
+    port=465
     tls=true
     auth=true
-    user="postmaster@webknossos.org"
-    pass="owx7ERsPXsoZ74ZhzdZWKCHiKFXnCKRt"
+    user=""
+    pass=""
   }
   subject.prefix="webKnossos | "
 }
