--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.2",
     "react-remarkable": "^1.1.1",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.0",
     "redux-saga": "^0.14.3",
