--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "flow-coverage-report": "^0.2.0",
     "font-awesome": "^4.5.0",
     "form-syphon": "0.0.5",
+    "history": "^4.7.2",
     "immutability-helper": "^2.1.1",
     "jasny-bootstrap": "^3.1.3",
     "jquery": "^3.0.0",
