WIP access tokens

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,6 +51,8 @@ application{
       password="secret"
     }
     ssoKey="something secure"
+    # token used to authenticate webknossos to the datastore
+    dataStoreToken="somethingSecure"
   }
 }
 
