--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "jquery": "^3.0.0",
     "lodash": "^4.13.1",
     "mjs": "^1.0.0",
-    "moment": "2.18.1",
+    "moment": "^2.18.1",
     "nouislider": "^8.2.1",
     "pako": "^0.2.8",
     "react": "^15.5.4",
