--- a/.babelrc
+++ b/.babelrc
@@ -17,7 +17,8 @@
         "transform-class-properties",
         "transform-flow-strip-types",
         ["import", { libraryName: "antd" }],
-        "syntax-dynamic-import"
+        "syntax-dynamic-import",
+        ["transform-object-rest-spread", { "useBuiltIns": true }]
       ],
     }
   },
@@ -45,6 +46,7 @@
     "transform-class-properties",
     "transform-flow-strip-types",
     ["import", { libraryName: "antd" }],
-    "syntax-dynamic-import"
+    "syntax-dynamic-import",
+    ["transform-object-rest-spread", { "useBuiltIns": true }]
   ],
 }
