--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,7 +43,7 @@ application{
   enableAutoVerify=false
   insertInitialData=true
   authentication{
-    enableDevAutoLogin=true
+    enableDevAutoLogin=false
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser={
