--- a/circle.yml
+++ b/circle.yml
@@ -1,3 +1,7 @@
+###########################
+# DEPRECATED (and unused) #
+###########################
+
 machine:
   environment:
     SBT_VERSION_TAG: sbt-0.13.9_mongo-3.2.1_node-7.x_jdk-8
