--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "flow-coverage":
       "node_modules/flow-coverage-report/bin/flow-coverage-report.js -i \"./app/assets/javascripts/**/*.js\" -i \"./app/assets/javascripts/**/*.jsx\" -x \"./app/assets/javascripts/test/**/*.js\" -t html -t text",
     "docs":
-      "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api"
+      "node_modules/.bin/documentation build app/assets/javascripts/oxalis/api/api_loader.js --github --project-name \"webKnossos Frontend API\" --format html --output public/docs/frontend-api"
   },
   "dependencies": {
     "airbrake-js": "^0.5.8",
