--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,7 @@ application {
   branch = local
   version = "1.0.0-1"
 }
+libraryDependencies += filters
 
 play.modules.enabled += "com.scalableminds.braingames.datastore.DataStoreModule"
 play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
@@ -175,4 +176,6 @@ mail.reply="No reply <no-reply@webknossos.org>"
 play.http.parser.maxMemoryBuffer=25M
 play.http.parser.maxDiskBuffer=1G
 #play.http.filters = "utils.Filters"
+play.http.filters=utils.MyCookieFilter
+play.filters.enabled += "utils.MyCookieFilter"
 play.http.errorHandler = "utils.ErrorHandler"
