--- a/conf/application.conf
+++ b/conf/application.conf
@@ -175,4 +175,6 @@ mail.reply="No reply <no-reply@webknossos.org>"
 play.http.parser.maxMemoryBuffer=25M
 play.http.parser.maxDiskBuffer=1G
 #play.http.filters = "utils.Filters"
+play.http.filters=utils.MyCookieFilter
+play.filters.enabled += "utils.MyCookieFilter"
 play.http.errorHandler = "utils.ErrorHandler"
