--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     stdin_open: true
 
   sbt:
-    image: sbt
+    image: scalableminds/sbt:sbt-0.13.15_mongo-3.2.17_node-8.x_jdk-8
     ports:
       - "5005:5005"
     environment:
