adjusted 'onNotAuthenticated' so that it might solve the problem of the e2e test (not a perfect solution); fixed some error with 'insert' of a user

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -15,7 +15,7 @@ play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 datastore {
   key = "something-secure"
   name = "localhost"
-  debugMode = false //true
+  debugMode = true
   oxalis{
     uri = "localhost:9000"
     secured = false
@@ -30,7 +30,7 @@ evolutionplugin = disabled
 
 workload {
   mail = ""
-  active = true//false
+  active = false
 }
 
 braintracing{
