--- a/.flowconfig
+++ b/.flowconfig
@@ -15,6 +15,7 @@
 <PROJECT_ROOT>/node_modules/flow-coverage-report/
 <PROJECT_ROOT>/node_modules/draft-js/
 <PROJECT_ROOT>/node_modules/documentation/
+<PROJECT_ROOT>/node_modules/immutable/
 
 [options]
 module.ignore_non_literal_requires=true
