first version of replacing unicode chars

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ application{
   enableAutoVerify=false
   insertInitialData=true
   authentication{
-    enableDevAutoLogin=true
+    enableDevAutoLogin=false
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser={
