only one token per user; improved deleteToken; fixed bugs

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,7 +44,7 @@ application{
   enableAutoVerify=false
   insertInitialData=true
   authentication{
-    enableDevAutoLogin=false
+    enableDevAutoLogin=true
     enableDevAutoVerify=false
     enableDevAutoAdmin=false
     defaultUser={
