--- a/conf/silhouette.conf
+++ b/conf/silhouette.conf
@@ -1,17 +1,20 @@
 silhouette {
 
   # Authenticator settings
-  authenticator.cookieName="authenticator"
-  authenticator.cookiePath="/"
-  authenticator.secureCookie=false
-  authenticator.httpOnlyCookie=true
-  authenticator.useFingerprinting=true
-  authenticator.authenticatorIdleTimeout=30 minutes
-  authenticator.authenticatorExpiry=12 hours
+  cookieAuthenticator.cookieName="authenticator"
+  cookieAuthenticator.cookiePath="/"
+  cookieAuthenticator.secureCookie=false
+  cookieAuthenticator.httpOnlyCookie=true
+  cookieAuthenticator.useFingerprinting=true
+  cookieAuthenticator.authenticatorIdleTimeout=30 minutes
+  cookieAuthenticator.authenticatorExpiry=12 hours
 
-  authenticator.rememberMe.cookieMaxAge=30 days
-  authenticator.rememberMe.authenticatorIdleTimeout=5 days
-  authenticator.rememberMe.authenticatorExpiry=30 days
+  cookieAuthenticator.rememberMe.cookieMaxAge=30 days
+  cookieAuthenticator.rememberMe.authenticatorIdleTimeout=5 days
+  cookieAuthenticator.rememberMe.authenticatorExpiry=30 days
+
+  tokenAuthenticator.headerName="X-Auth-Token"
+  tokenAuthenticator.authenticatorExpiry= 365 days
 
   # OAuth1 token secret provider settings
   oauth1TokenSecretProvider.cookieName="OAuth1TokenSecret"
