--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ services:
     links:
       - mongo-dev
     command: >
-      bash -c
-      "sbt -v -d -jvm-debug 5005 \"run
+      sbt -v -d -jvm-debug 5005 "run
       -Djava.net.preferIPv4Stack=true
       -Dhttp.address=0.0.0.0
       -Dhttp.port=$${PORT}
@@ -28,7 +27,7 @@ services:
       -Dmongodb.url=$${MONGO_HOST}
       -Dmongodb.port=$${MONGO_PORT}
       -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      \""
+      "
     environment:
       - PORT=9000
       - MONGO_HOST=mongo-dev
@@ -41,50 +40,47 @@ services:
     ports:
       - "5005:5005"
     environment:
-      - SBT_USER=$USER
+      - USER_NAME=$USER
+      - USER_UID=$uid
+      - USER_GID=$gid
+      - TZ
     volumes:
       - ".:/project"
-      - "${DOCKER_CACHE_PREFIX:-~}/.m2:$HOME/.m2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:$HOME/.ivy2"
-      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:$HOME/.sbt"
+      - "${DOCKER_CACHE_PREFIX:-~}/.m2:/home/$USER/.m2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.ivy2:/home/$USER/.ivy2"
+      - "${DOCKER_CACHE_PREFIX:-~}/.sbt:/home/$USER/.sbt"
       - "${DOCKER_CACHE_PREFIX:-~}/.yarn-cache:/usr/local/share/.cache/yarn"
-      - /etc/timezone:/etc/timezone:ro
-      - /etc/localtime:/etc/localtime:ro
-      - /etc/group:/etc/group:ro
-      - /etc/passwd:/etc/passwd:ro
-      - /etc/shadow:/etc/shadow:ro
 
   frontend-dependencies:
     extends:
       service: sbt
-    command: bash -c "yarn install"
+    command: yarn install
 
   frontend-linting:
     extends:
       service: sbt
-    command: bash -c "yarn run lint && yarn run am-i-pretty"
+    command: yarn run lint && yarn run am-i-pretty
 
   frontend-flow:
     extends:
       service: sbt
-    command: bash -c "yarn run flow"
+    command: yarn run flow
 
   frontend-tests:
     extends:
       service: sbt
-    command: bash -c "yarn test-verbose"
+    command: yarn test-verbose
 
   frontend-docs:
     extends:
       service: sbt
-    command: bash -c "yarn run docs"
+    command: yarn run docs
 
   e2e-tests:
     extends:
       service: sbt
     command: >
-      bash -c
-      "sbt -v -d \"test-only * --
+      sbt -v -d "test-only * --
       -Dconfig.file=./conf/application_$${MODE}.conf
       -Djava.net.preferIPv4Stack=true
       -Dhttp.address=0.0.0.0
@@ -93,7 +89,7 @@ services:
       -Dmongodb.url=$${MONGO_HOST}
       -Dmongodb.port=$${MONGO_PORT}
       -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      \""
+      "
     ports:
       - "9000:9000"
     links:
