--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
     links:
       - mongo-dev
     command: >
-      sbt -v -d -jvm-debug 5005 "run
+      bash -c
+      "sbt -v -d -jvm-debug 5005 \"run
       -Djava.net.preferIPv4Stack=true
       -Dhttp.address=0.0.0.0
       -Dhttp.port=$${PORT}
@@ -27,7 +28,7 @@ services:
       -Dmongodb.url=$${MONGO_HOST}
       -Dmongodb.port=$${MONGO_PORT}
       -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      "
+      \""
     environment:
       - PORT=9000
       - MONGO_HOST=mongo-dev
@@ -81,7 +82,8 @@ services:
     extends:
       service: base
     command: >
-      sbt -v -d "test-only * --
+      bash -c
+      "sbt -v -d \"test-only * --
       -Dconfig.file=./conf/application_$${MODE}.conf
       -Djava.net.preferIPv4Stack=true
       -Dhttp.address=0.0.0.0
@@ -90,7 +92,7 @@ services:
       -Dmongodb.url=$${MONGO_HOST}
       -Dmongodb.port=$${MONGO_PORT}
       -Dmongodb.uri=mongodb://$${MONGO_HOST}:$${MONGO_PORT}/$${MONGO_DB}
-      "
+      \""
     ports:
       - "9000:9000"
     links:
